<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/good_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_good"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/good_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green2"
        android:contentDescription="@string/choose_good"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck"></Spinner>

    <TextView
        android:id="@+id/trade_point_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_trade_point"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/trade_point_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green2"
        android:contentDescription="@string/choose_trade_point"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck"></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/enter_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/choose_count"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#757575"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/full_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_price"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/full_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/text_color"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rub"
            android:textColor="@color/text_color"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>