<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background"
    android:orientation="vertical"
    android:padding="12dp">

    <EditText
        android:id="@+id/enter_good_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/enter_good_measure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/measure"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#A1887F"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/enter_good_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="20sp"
        android:autofillHints="" />

</LinearLayout>