<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="305dp"
        android:layout_height="114dp"
        android:layout_marginTop="144dp"
        android:layout_marginBottom="38dp"
        android:backgroundTint="@color/green2"
        android:onClick="startAllGoodsActivity"
        android:text="@string/goods"
        android:textColor="@color/text_color"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button1"
        android:layout_width="305dp"
        android:layout_height="114dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/green2"
        android:onClick="startAllTradePointsActivity"
        android:text="@string/trade_points"
        android:textColor="@color/text_color"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="305dp"
        android:layout_height="114dp"
        android:layout_marginBottom="175dp"
        android:backgroundTint="@color/green2"
        android:onClick="startAllOrdersActivity"
        android:text="@string/orders"
        android:textColor="@color/text_color"
        android:textSize="34sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>